[tool.poetry]
name = "whotsdatsongonfip"
version = "0.1.0"
description = ""
authors = ["Guiz <gcouzy@cisco.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
bs4 = "^0.0.1"
certifi = "^2020.12.5"
chardet = "^4.0.0"
lxml = "^4.6.3"
requests = "^2.25.1"
soupsieve = "^2.2.1"
urllib3 = "^1.26.4"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
